{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 170,
  "lineage": "8bd3bf91-9227-7dd4-c15a-9717e209c54b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:internet-gateway/igw-01ced7098b96cb53f",
            "id": "igw-01ced7098b96cb53f",
            "owner_id": "905418307078",
            "tags": {
              "Name": "stock-scraper-igw"
            },
            "tags_all": {
              "Name": "stock-scraper-igw"
            },
            "vpc_id": "vpc-037760912dafcc816"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:route-table/rtb-05debe6c1296822df",
            "id": "rtb-05debe6c1296822df",
            "owner_id": "905418307078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ced7098b96cb53f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stock-scraper-route-table-1"
            },
            "tags_all": {
              "Name": "stock-scraper-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-037760912dafcc816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0026bbd6122ad72a3",
            "route_table_id": "rtb-05debe6c1296822df",
            "subnet_id": "subnet-0cdeae537ab495695"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table-1",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045393214f8477312",
            "route_table_id": "rtb-05debe6c1296822df",
            "subnet_id": "subnet-09882444bce8f374b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table-1",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c0bca14282ca8c4",
            "route_table_id": "rtb-05debe6c1296822df",
            "subnet_id": "subnet-031e4b3161f0d7595"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table-1",
            "aws_subnet.subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:security-group/sg-0db91e1606a7e0c03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db91e1606a7e0c03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL from office IP",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "stock-scraper-rds-sg",
            "name_prefix": "",
            "owner_id": "905418307078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stock-scraper-rds-sg"
            },
            "tags_all": {
              "Name": "stock-scraper-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-037760912dafcc816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:subnet/subnet-0cdeae537ab495695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdeae537ab495695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418307078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stock-scraper-aurora-subnet-1"
            },
            "tags_all": {
              "Name": "stock-scraper-aurora-subnet-1"
            },
            "vpc_id": "vpc-037760912dafcc816"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:subnet/subnet-09882444bce8f374b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09882444bce8f374b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418307078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stock-scraper-aurora-subnet-2"
            },
            "tags_all": {
              "Name": "stock-scraper-aurora-subnet-2"
            },
            "vpc_id": "vpc-037760912dafcc816"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:subnet/subnet-031e4b3161f0d7595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.16.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031e4b3161f0d7595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418307078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stock-scraper-aurora-subnet-3"
            },
            "tags_all": {
              "Name": "stock-scraper-aurora-subnet-3"
            },
            "vpc_id": "vpc-037760912dafcc816"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:905418307078:vpc/vpc-037760912dafcc816",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.1.0/24",
            "default_network_acl_id": "acl-0624a421306a62805",
            "default_route_table_id": "rtb-020b6f7f0c079db44",
            "default_security_group_id": "sg-03d39aab3b82d66bd",
            "dhcp_options_id": "dopt-087df129bb5697ec5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037760912dafcc816",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020b6f7f0c079db44",
            "owner_id": "905418307078",
            "tags": {
              "Name": "stock-scraper-vpc"
            },
            "tags_all": {
              "Name": "stock-scraper-vpc"
            }
          }
        }
      ]
    }
  ]
}